--- a/templates/about.html
+++ b/templates/about.html
@@ -4,29 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aahar | About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="../static/home.css">
 </head>
 <body>
-    <header>
-        <div class="logo">Food <b style="color: #06C167;">Donate</b></div>
-        <div class="hamburger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="#about" class="active" >About</a></li>
-                <li><a href="contact.html" >Contact</a></li>
-                <li><a href="profile.php" >Profile</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="logo">Food <b style="color: #06C167;">Donate</b></div>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <nav class="nav-bar">
+        <ul>
+          {% if session["user_id"] %}
+            <li><a href="#" >Profile</a></li>
+            <li><a href="/logout" >Log Out</a></li>
+          {% endif %}
+          {% if not session["user_id"] %}
+          <li><a href="/" class="active">Home</a></li>
+          <li><a href="/about" >About</a></li>
+          <li><a href="/contact" >Contact</a></li>
+          <li><a href="/login" >Login</a></li>
+          <li><a href="/Signup" >Signup</a></li>
+          {% endif %}
+
+        </ul>
+    </nav>
+</header>
     <script>
         hamburger=document.querySelector(".hamburger");
         hamburger.onclick =function(){
@@ -185,32 +193,53 @@
         <p>We are a team of passionate individuals committed to addressing the issue of food waste in India. Our goal is to create a system that connects food donors with charities and NGOs, while also reducing the environmental impact of food waste.</p>
       </div>
       <br>
- 
-      
-
       <br>
-      
-     
 
-<div style="text-align: center; padding-bottom: 50px;">
-  <p  style=" font-size:30px ; padding-bottom: 10px;" >View Demo </p> 
-<iframe id="video" src="https://player.vimeo.com/video/844273515?h=07e236424d" width="640" height="342" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-
-
-
-  
-   
      <div class="footer-basic">
-     <footer>
+    
+      <footer class="footer">
+        <div class="footer-left col-md-4 col-sm-6">
+          <p class="about">
+            <span> About us</span>The basic concept of this project  Food Waste Management is to collect the excess/leftover  food from donors such as hotels, restaurants, marriage halls , etc and distribute to  the  needy people .
+     </p>
+        
+        </div>
+        <div class="footer-center col-md-4 col-sm-6">
+          <div>
+            <p><span> Contact</span> </p>
+            
+          </div>
+          <div>
+        
+            <p> (+00) 0000 000 000</p>
+            
+          </div>
+          <div>
+        
+            <p><a href="#"> Fooddonate@gmail.com</a></p>
+          </div>
+          <div class="sociallist">
+            <ul class="social">
+            <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+            <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
+            <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+            <li><a href="https://github.com/kishor-23"><i class="fa fa-github" style="font-size:50px;color: black;"></i></a></li>
+           </ul>
+          </div>
+        </div>
+        <div class="footer-right col-md-4 col-sm-6">
+          <h2> Food<span> Donate</span></h2>
+          <p class="menu">
+            <a href="/"> Home</a> |
+            <a href="/about"> About</a> |
+            <a href="/donate"> Donate</a> |
+            <a href="/contact"> Contact</a>
+          </p>
+          <p class="name"> Food Donate &copy; 2023</p>
+        </div>
+      </footer>
 
-      <ul class="list-inline">
-          <li class="list-inline-item"><a href="index.html">Home</a></li>
-          <li class="list-inline-item"><a href="#">About</a></li>
-          <li class="list-inline-item"><a href="contact.html">Contact</a></li>
-          <li class="list-inline-item"><a href="profile.html">Profile</a></li>
-      </ul>
-      <p class="copyright">Food donate © 2023</p>
-  </footer>
+    
   </div>
 
     </body>
