--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,32 +5,40 @@
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aahar | Contact</title>
     <link rel="stylesheet" href="../static/home.css">
    
-	<link rel="stylesheet" href="chatbot.css">
+	<link rel="stylesheet" href="../static/chatbot.css">
 	 
 
 </head>
 
 
 <body>
-	<header>
-        <div class="logo">Food <b style="color: #06C167;">Donate</b></div>
-        <div class="hamburger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="about.html" >About</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-                <li><a href="profile.html" >Profile</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="logo">Food <b style="color: #06C167;">Donate</b></div>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <nav class="nav-bar">
+        <ul>
+          {% if session["user_id"] %}
+            <li><a href="#" >Profile</a></li>
+            <li><a href="/logout" >Log Out</a></li>
+          {% endif %}
+          {% if not session["user_id"] %}
+          <li><a href="/" class="active">Home</a></li>
+          <li><a href="/about" >About</a></li>
+          <li><a href="/contact" >Contact</a></li>
+          <li><a href="/login" >Login</a></li>
+          <li><a href="/Signup" >Signup</a></li>
+          {% endif %}
+
+        </ul>
+    </nav>
+</header>
     <script>
         hamburger=document.querySelector(".hamburger");
         hamburger.onclick =function(){
@@ -81,7 +89,7 @@
 
 <button class="accordion">how to donate food ?</button>
 <div class="panel">
-  <p>1)click on <a href="fooddonate.html">donate</a> in home page </p>
+  <p>1)click on <a href="/donate">donate</a> in home page </p>
   <p>2)fill the details </p>
   <p>3)click on submit</p>
  <img src="../static/img/mobile.jpg" alt="" width="100%">
@@ -102,6 +110,50 @@
   <!-- <div class="img">
     <img src="chitti.jpg" alt="Robot cartoon" height="300" width="400">
     </div>  -->
+        
+    <footer class="footer">
+      <div class="footer-left col-md-4 col-sm-6">
+        <p class="about">
+          <span> About us</span>The basic concept of this project  Food Waste Management is to collect the excess/leftover  food from donors such as hotels, restaurants, marriage halls , etc and distribute to  the  needy people .
+   </p>
+      
+      </div>
+      <div class="footer-center col-md-4 col-sm-6">
+        <div>
+          <p><span> Contact</span> </p>
+          
+        </div>
+        <div>
+      
+          <p> (+00) 0000 000 000</p>
+          
+        </div>
+        <div>
+      
+          <p><a href="#"> Fooddonate@gmail.com</a></p>
+        </div>
+        <div class="sociallist">
+          <ul class="social">
+          <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+          <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
+          <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+          <li><a href="https://github.com/kishor-23"><i class="fa fa-github" style="font-size:50px;color: black;"></i></a></li>
+         </ul>
+        </div>
+      </div>
+      <div class="footer-right col-md-4 col-sm-6">
+        <h2> Food<span> Donate</span></h2>
+        <p class="menu">
+          <a href="/"> Home</a> |
+          <a href="/about"> About</a> |
+          <a href="/donate"> Donate</a> |
+          <a href="/contact"> Contact</a>
+        </p>
+        <p class="name"> Food Donate &copy; 2023</p>
+      </div>
+    </footer>
+
+  
     
 </body>
 <script type="text/javascript" src="../static/chatbot.js" ></script>
