--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aahar | Login</title>
     <link rel="stylesheet" href="../static/loginstyle.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -35,7 +35,7 @@
             <button type="submit" name="sign"> Sign in</button>
          </div>
          <div class="signin-up">
-            <p>Don't have an account? <a href="login.html">Register</a></p>
+            <p>Don't have an account? <a href="/signup">Register</a></p>
          </div>
         </form>
       </div>
