--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
           <li><a href="/about" >About</a></li>
           <li><a href="/contact" >Contact</a></li>
           <li><a href="/login" >Login</a></li>
-          <li><a href="/Signup" >Signup</a></li>
+          <li><a href="/signup" >Signup</a></li>
           {% endif %}
 
         </ul>
